Archive2/65/be3df0dbc2b44f/output
main.cpp: In member function 'void Child<typeA>::bar()':
main.cpp:13:19: error: expected primary-expression before 'double'
         this->foo<double>();
                   ^
main.cpp:13:19: error: expected ';' before 'double'
